Target JDK 26 as the tip and use finalized APIs
Keep main on the current feature release. Close Deflater with
try-with-resources, validate constructors before super, and compare
signing algorithm names with equalsFoldCase.